fixing UI thread problems

--- a/d3-viz.html
+++ b/d3-viz.html
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="col-sm-7">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#subjectSelectionModal" onclick="initializeSelection()">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#subjectSelectionModal">
               Select Subject Data
         </button>
         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#subjectVideoModal">
