fixing UI thread problems

--- a/d3-viz.html
+++ b/d3-viz.html
@@ -40,6 +40,7 @@
         <a class="navbar-brand" href="#">Gizmo Visualizer</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href=""><span id="user"></span></a></li>
         <li><a href="#"><span class="glyphicon glyphicon-log-in"  onclick="logOut()"></span> Logout</a></li>
       </ul>
     </div>
@@ -76,7 +77,7 @@
         </div>
       </div>
       <div class="col-sm-7">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#subjectSelectionModal" onclick="initializeSelection()">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#subjectSelectionModal">
               Select Subject Data
         </button>
         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#subjectVideoModal">
